# apc1

./: Cargo.toml  README.md
.github/workflows/: ci.yml
.sqlx/: query-b98b9ee2eb5a3d3f609087d6059b0e8faf63c8deae153d048889e958af291265.json
apc1-cli/: Cargo.toml
apc1-cli/migrations/: 20240622_initial_database.sql
apc1-cli/src/: main.rs
apc1-core/: Cargo.toml
apc1-core/src/: lib.rs  request.rs  response.rs
apc1-embedded/: Cargo.toml
apc1-embedded/src/: lib.rs
