[package]
name = "apc1-cli"
version = "0.1.0"
description = "Command-line interface to interact with APC1 devices from ScioSense via i2c-dev."
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4", features = ["cargo", "derive", "env"] }
i2cdev = "0.6.1"
apc1-core = {version = "0.1", path = "../apc1-core"}
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "migrate", "time", "uuid"] }
tokio = { version = "1", features = ["full"]}
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
time = "0.3.36"
