[package]
name = "apc1-core"
version = "0.1.0"
description = "Driver for the Air Purification Combo ONE (APC1) devices from ScioSense."
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies.embedded-hal]
version = "1.0"
optional = true

[dependencies.thiserror]
version = "2"
default-features = false

[features]
default = []
embedded = ["embedded-hal"]
